--- a/src/components/formats/v1-code-blocks/writing/writing-embed-editor/writing-embed.scss
+++ b/src/components/formats/v1-code-blocks/writing/writing-embed-editor/writing-embed.scss
@@ -11,16 +11,13 @@
 
 
 // Universal selector that works in both Live Preview AND Reading View
-// TODO: This is common to drawing and writing files. It should be moved to a common area.
-.markdown-rendered.ddc_ink_embed-block {
-    
-    // Enables placing elements outside of the embed
+.cm-preview-code-block.cm-embed-block.markdown-rendered:has(.ddc_ink_writing-embed) {
+    // Enables placing UI elements outside of the embed
     contain: unset !important;
-    overflow: visible !important;
-
-    // Extends ink area into margins of writing area
-    // NOTE: The above was removed and moved to javascript applyCommonAncestorStyling function. Because file-margin couldn't be trusted to be a single value. Sometimes it would bve something like '8px 22px'
-    // margin: 0 calc(-1 * var(--file-margins) + 4px) !important;
+    overflow: visible;
+    
+    // Extend through page horizontal margin
+    margin: 0 calc(-1 * var(--file-margins)) !important;
 
     // Prevent default obsidian hover outline
     &:hover {
@@ -31,5 +28,49 @@
     .edit-block-button {
         display: none;
     }
-}
 
+    .ddc_ink_writing-editor {
+
+        .tl-container {
+            // Allow tldraw right click menu to overflow container
+            overflow: visible;
+            clip: unset;
+            contain: none !important;
+            
+            .tlui-layout {
+                // Allow tldraw right click menu to overflow container
+                overflow: visible;
+                clip: unset;
+                contain: none !important;
+
+                .tlui-button.tlui-menu__trigger {
+                    display: none;
+                }
+                
+                .tlui-navigation-zone {
+                    display: none;
+                }
+                
+                .tlui-help-menu {
+                    display: none;
+                }
+                
+                
+                .tlui-layout__top {
+                    grid-row: 1;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    translate: 0 -100%;
+                }
+                .tlui-layout__bottom {
+                    grid-row: 1;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    translate: 0 -100%;
+                }
+            }
+        }
+    }
+}
